# krust-sitter

./: CREDITS.md  Cargo.toml  LICENSE  README.md  lefthook.yml  release.toml
.github/workflows/: ci.yml  release.yml
common/: Cargo.toml
common/src/: expansion.rs  lib.rs
example/: Cargo.toml  build.rs
example/src/: arithmetic.rs  main.rs  optionals.rs  repetitions.rs  words.rs
example/src/snapshots/: krust_sitter_example__arithmetic__tests__failed_parses-2.snap  krust_sitter_example__arithmetic__tests__failed_parses-3.snap  krust_sitter_example__arithmetic__tests__failed_parses-4.snap  krust_sitter_example__arithmetic__tests__failed_parses.snap  krust_sitter_example__optionals__tests__optional_grammar-2.snap  krust_sitter_example__optionals__tests__optional_grammar-3.snap  krust_sitter_example__optionals__tests__optional_grammar-4.snap  krust_sitter_example__optionals__tests__optional_grammar-5.snap  krust_sitter_example__optionals__tests__optional_grammar-6.snap  krust_sitter_example__optionals__tests__optional_grammar-7.snap  krust_sitter_example__optionals__tests__optional_grammar-8.snap  krust_sitter_example__optionals__tests__optional_grammar.snap  krust_sitter_example__repetitions__tests__repetitions_grammar-2.snap  krust_sitter_example__repetitions__tests__repetitions_grammar-3.snap  krust_sitter_example__repetitions__tests__repetitions_grammar.snap  krust_sitter_example__repetitions__tests__repetitions_grammar2-2.snap  krust_sitter_example__repetitions__tests__repetitions_grammar2-3.snap  krust_sitter_example__repetitions__tests__repetitions_grammar2.snap  krust_sitter_example__repetitions__tests__repetitions_grammar3-2.snap  krust_sitter_example__repetitions__tests__repetitions_grammar3-3.snap  krust_sitter_example__repetitions__tests__repetitions_grammar3-4.snap  krust_sitter_example__repetitions__tests__repetitions_grammar3-5.snap  krust_sitter_example__repetitions__tests__repetitions_grammar3.snap  krust_sitter_example__words__tests__words_grammar-2.snap  krust_sitter_example__words__tests__words_grammar-3.snap  krust_sitter_example__words__tests__words_grammar-4.snap  krust_sitter_example__words__tests__words_grammar.snap
macro/: Cargo.toml
macro/src/: errors.rs  expansion.rs  lib.rs
macro/src/snapshots/: krust_sitter_macro__tests__enum_prec_left.snap  krust_sitter_macro__tests__enum_recursive.snap  krust_sitter_macro__tests__enum_transformed_fields.snap  krust_sitter_macro__tests__enum_with_named_field.snap  krust_sitter_macro__tests__enum_with_unamed_vector.snap  krust_sitter_macro__tests__grammar_unboxed_field.snap  krust_sitter_macro__tests__spanned_in_vec.snap  krust_sitter_macro__tests__struct_extra.snap  krust_sitter_macro__tests__struct_optional.snap  krust_sitter_macro__tests__struct_repeat.snap
runtime/: Cargo.toml
runtime/src/: __private.rs  error.rs  extract.rs  lib.rs  rule.rs
runtime/src/extract/: field.rs
tool/: Cargo.toml
tool/src/: lib.rs  textmate.rs
tool/src/snapshots/: krust_sitter_tool__tests__enum_conflicts_prec_dynamic.snap  krust_sitter_tool__tests__enum_prec_left.snap  krust_sitter_tool__tests__enum_recursive.snap  krust_sitter_tool__tests__enum_transformed_fields.snap  krust_sitter_tool__tests__enum_with_named_field.snap  krust_sitter_tool__tests__enum_with_unamed_vector.snap  krust_sitter_tool__tests__grammar_repeat.snap  krust_sitter_tool__tests__grammar_repeat1.snap  krust_sitter_tool__tests__grammar_repeat_no_delimiter.snap  krust_sitter_tool__tests__grammar_unboxed_field.snap  krust_sitter_tool__tests__grammar_with_extras.snap  krust_sitter_tool__tests__immediate.snap  krust_sitter_tool__tests__spanned_in_vec.snap  krust_sitter_tool__tests__struct_optional.snap  krust_sitter_tool__textmate__tests__textmate_arithmetic.snap  krust_sitter_tool__textmate__tests__textmate_if_statement.snap  krust_sitter_tool__textmate__tests__textmate_simple_enum.snap  krust_sitter_tool__textmate__tests__textmate_string_patterns_use_begin_end_rules.snap  krust_sitter_tool__textmate__tests__textmate_with_extras.snap  krust_sitter_tool__textmate__tests__textmate_with_token_wrapped_extras.snap  rust_sitter_tool__textmate__tests__textmate_with_token_wrapped_extras.snap
tool/tests/: integration.rs
types/: Cargo.toml
types/src/: grammar.rs  lib.rs
