[workspace]
resolver = "2"
members = [
  "macro",
  "runtime",
  "tool",
  "example",
  "common", "types",
]
[workspace.package]
version = "0.5.0"
authors = [
  "Jason Boatman",
  "Shadaj Laddad <shadaj@users.noreply.github.com>"
]

[workspace.dependencies]
tree-sitter = { git = "https://github.com/jaboatman/tree-sitter", branch = "combined" }
tree-sitter-generate = { git = "https://github.com/jaboatman/tree-sitter", branch = "combined", default-features = false, features = ["load"] }
