[workspace]
resolver = "2"
members = [
  "macro",
  "runtime",
  "tool",
  "example",
  "common", "types",
]
[workspace.package]
version = "0.5.1"
authors = [
  "wellknown.id ltd"
]
license = "MIT"
repository = "https://github.com/wellknown-id/krust-sitter"
homepage = "https://github.com/wellknown-id/krust-sitter"

[workspace.dependencies]
tree-sitter = "0.26.8"
tree-sitter-generate = { version = "0.26.8", default-features = false, features = ["load"] }

[workspace.metadata.lefthook]
version = "1.12.3"
