[package]
name = "krust-sitter-common"
description = "Shared expansion and grammar logic for Krust Sitter"
readme = "../README.md"
repository = "https://github.com/wellknown-id/krust-sitter"
version.workspace = true
authors.workspace = true
edition = "2024"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
krust-sitter-types = { version = "0.5.0", path = "../types" }
syn = { version = "2", features = [ "full", "extra-traits" ] }
proc-macro2 = "1"
quote = "1"

serde_json = "1"
itertools = "0.14"
