[package]
name = "krust-sitter-common"
description = "Shared expansion and grammar logic for Krust Sitter"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2024"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
krust-sitter-types = { version = "0.5.1", path = "../types" }
syn = { version = "2", features = [ "full", "extra-traits" ] }
proc-macro2 = "1"
quote = "1"

serde_json = "1"
itertools = "0.14"
