[package]
name = "krust-sitter-example"
description = "Example grammars and parsers for Krust Sitter"
readme = "../README.md"
repository = "https://github.com/wellknown-id/krust-sitter"
version.workspace = true
authors.workspace = true
edition = "2021"
license = "MIT"
publish = false

[dependencies]
env_logger = "0.11"
krust-sitter = { version = "0.5.0", path = "../runtime" }
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

[build-dependencies]
krust-sitter-tool = { version = "0.5.0", path = "../tool" }

[dev-dependencies]
insta = "1.39"
wasm-bindgen-test = "0.3.0"
