[package]
name = "krust-sitter-macro"
description = "Procedural macros for defining Krust Sitter grammars in Rust"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2024"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
krust-sitter-common = { version = "0.5.1", path = "../common" }
krust-sitter-types = { version = "0.5.1", path = "../types" }

[dev-dependencies]
insta = "1"
tempfile = "3"
