[package]
name = "krust-sitter"
description = "Define Tree-sitter grammars directly in Rust"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2024"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter.workspace = true
krust-sitter-macro = { version = "0.5.1", path = "../macro" }
krust-sitter-types = { version = "0.5.1", path = "../types" }
log = "0.4"
# This one could be optional.
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
insta = "1.39"
tempfile = "3.2.0"
