[package]
name = "krust-sitter-tool"
description = "Build and export Krust Sitter grammars from Rust source"
readme = "../README.md"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition = "2024"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
syn-inline-mod = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
krust-sitter-common = { version = "0.5.0", path = "../common" }
krust-sitter-types = { version = "0.5.0", path = "../types" }

tempfile = "3"
tree-sitter.workspace = true
tree-sitter-generate.workspace = true
cc = "1"

[dev-dependencies]
insta = "1"
