[package]
name = "krust-sitter-types"
description = "Grammar IR types for Krust Sitter"
readme = "../README.md"
repository = "https://github.com/wellknown-id/krust-sitter"
edition = "2024"
version.workspace = true
authors.workspace = true
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
